# zoombuild

./: .env  .gitignore  README.md  pyproject.toml
src/: .env  hello.py
src/example/: __init__.py  tester.py
src/example/submodule/: __init__.py  details..py
src/zoombuild/tools/: binary_packager.py  metadata.py  project_info.py  python_compiler.py  python_packager.py  self_test.py  test_runner.py  tests.py  unpacker_script.txt
tests/: test_binary_packager.py  test_hello.py  test_project_info.py  test_py_packager.py  test_stub.py
tests/project_examples/: nose_prj.toml  pytest_prj.toml  tox_prj.toml  unittest_prj.toml
tools/: binary_packager.py  copier.py  python_compiler.py  tests.py
