[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoombuild"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"python-dotenv>=1.01",
	"tqdm>=4.67.1",
	"ruff>=0.11.4",
	"pytest",
	"click>=8.1.8",
	"tomli>=2.2.1",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[project.scripts]
zb-package = "zoombuild.tools.binary_packager:main"
zb-python = "zoombuild.tools.python_packager:main"
zb-self-test = "zoombuild.tools.self_test:main"
zb-test = "zoombuild.tools.test_runner:main"

